--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -59,6 +59,11 @@
                                 <i class="fa fa-linkedin"></i>
                             </a>
                         {{ end }}
+                        {{ with .Site.Params.xing }}
+                            <a class="button-square button-social hint--top" data-hint="Xing" title="Xing" href="{{ . }}">
+                                <i class="fa fa-xing"></i>
+                            </a>
+                        {{ end }}
                         {{ with .Site.Params.gplus }}
                             <a class="button-square button-social hint--top" data-hint="Google+" title="Google+" href="{{ . }}">
                                 <i class="fa fa-google-plus"></i>
